fixed the checkbox label being off center

--- a/public/app.css
+++ b/public/app.css
@@ -26,3 +26,7 @@
 .wrap-break-word {
     word-wrap: break-word;
 }
+
+.label-fix > div.md-label {
+    padding-top: 4px;
+}
